--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </form>
     </div>
     <!-- parte a ser trabalhada com JS -->
-    <div class="container" id="cont2" style="background-color: white;">
+    <div class="container" id="cont2">
 
     </div>
   </main>
